Update to use Collections.emptyList() instead of List.of which is not supported in the correct java versions,
Signed-off-by: Aindriu Lavelle <aindriu.lavelle@aiven.io>